Fixed header home link.

--- a/content/blocks/header.mdx
+++ b/content/blocks/header.mdx
@@ -88,9 +88,9 @@ export const HeaderBlock = ({ ...props }) => {
 export const Branding = () => {
   const { title } = useSiteMetadata()
   return (
-    <A href="/" fontSize="3xl" fontWeight="semibold" color="text">
+    <Link href="/" fontSize="3xl" fontWeight="semibold" color="text">
       {title}
-    </A>
+    </Link>
   )
 }
 
