--- a/content/navs/footer.mdx
+++ b/content/navs/footer.mdx
@@ -1,14 +1,6 @@
-- [Features](/)
-  - [For developers](/)
-  - [For marketers](/)
-- [Pricing](/)
-  - [Basic](/)
-  - [Professional](/)
-  - [Business](/)
-- [Learn](/)
-  - [Docs](/)
-  - [Github](/)
-  - [Developer API](/)
-- [Support](/)
-  - [Forum](/)
-  - [Slack](/)
+- Learn
+  - [Docs](/docs)
+  - [Github](https://github.com/ethanjli/open-hardware-site)
+- Admin
+  - [Style Guide](/styleguide)
+  - [CMS](/admin)
