Made hero text more relevant.

--- a/content/blocks/home/hero.mdx
+++ b/content/blocks/home/hero.mdx
@@ -2,10 +2,10 @@
   <Container>
     <Flexbox flexDirection="column" textAlign="center">
       <H1 m="0" fontWeight="extrabold" lineHeight="tight">
-        Boost your productivity
+        Share your open-source hardware
       </H1>
       <P fontSize="xl|2xl" mt="2">
-        Reduce stress and increase your productivity.
+        Do cool things!
       </P>
       <Grid col="2" gap="4">
         <ButtonLink href="#" variant="primary">
