Update reflexjs and gatsby, and update the blog.

--- a/content/blocks/video.mdx
+++ b/content/blocks/video.mdx
@@ -26,9 +26,9 @@ export const VideoBlock = ({ url, play = true }) => {
       w="100%"
       boxShadow="3xl"
       mt="10|20"
-      rounded="xl"
+      rounded="2xl"
       overflow="hidden"
-      borderWidth="4px"
+      borderWidth="10px"
       borderColor="#000"
       bg="#000"
     >
