Added project updates to home page.

--- a/content/navs/footer.mdx
+++ b/content/navs/footer.mdx
@@ -1,6 +1,11 @@
-- Learn
-  - [Docs](/docs)
+- Explore
+  - [Concept](/about)
+  - [Gallery](/gallery)
+- Use
+  - [Reflex Docs](/docs)
+  - [Notion Docs](/notion)
   - [Github](https://github.com/ethanjli/open-hardware-site)
+  - [Updates](/updates)
 - Admin
   - [Style Guide](/styleguide)
   - [CMS](/admin)
