--- a/content/navs/header.mdx
+++ b/content/navs/header.mdx
@@ -1,4 +1,6 @@
-- [About](/about)
-- [Docs](/docs)
+- [Concept](/about)
+- [Reflex Docs](/docs)
   - <Block src="header/doc-links" />
-- [Project Updates](/blog)
+- [Notion Docs](/notion)
+- [Gallery](/gallery)
+- [Updates](/updates)
