--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,11 +1,13 @@
 <Block src="home/hero" />
 
-<Block src="home/features" />
-
 <Block src="home/cards" />
 
-<Block src="home/team" bg="muted" />
+<Block src="home/features" bg="muted" />
 
-<Block src="home/testimonial" />
+<Block src="home/team" />
 
-<Block src="home/form" />
+<Block src="home/testimonial" bg="muted" />
+
+<Block src="home/updates" />
+
+<Block src="home/form" bg="muted" />
