Improve page metatags and remove container wrapper around pages.

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,8 +1,10 @@
 ---
 title: About
 excerpt: About this project.
-
 ---
+
+<Container>
+
 # About Us
 
 Hello, **world**!
@@ -16,3 +18,5 @@ We are a team of people.
 ## Funding
 
 We have funding from somewhere.
+
+</Container>
