--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,3 +1,8 @@
+---
+title: Open Hardware Website Template
+excerpt: Website template for open-source hardware projects.
+---
+
 <Block src="home/hero" />
 
 <Block src="home/cards" />
