Removed Reflex docs content.

--- a/content/navs/footer.mdx
+++ b/content/navs/footer.mdx
@@ -1,8 +1,7 @@
 - Explore
   - [Concept](/about)
 - Use
-  - [Reflex Docs](/docs)
-  - [Notion Docs](/notion)
+  - [Docs](/notion)
   - [Github](https://github.com/ethanjli/open-hardware-site)
   - [Updates](/updates)
 - Admin
