--- a/content/navs/header.mdx
+++ b/content/navs/header.mdx
@@ -1,5 +1,3 @@
 - [Concept](/about)
-- [Reflex Docs](/docs)
-  - <Block src="header/doc-links" />
-- [Notion Docs](/notion)
+- [Docs](/notion)
 - [Updates](/updates)
