Add scrollytelling demo.

--- a/content/navs/footer.mdx
+++ b/content/navs/footer.mdx
@@ -1,5 +1,6 @@
 - Explore
   - [Concept](/about)
+  - [Scrollytelling](/scrollytelling)
 - Use
   - [Docs](/notion)
   - [Github](https://github.com/ethanjli/open-hardware-site)
