Make the header nav stay at the top of the screen

--- a/content/blocks/header.mdx
+++ b/content/blocks/header.mdx
@@ -9,7 +9,7 @@ export const HeaderBlock = ({ ...props }) => {
   const navName = "header"
   return (
     <Header
-      position={["sticky", "relative"]}
+      position={["sticky"/*, "relative"*/]}
       top="0"
       bg="background"
       zIndex="1000"
