--- a/content/blocks/header.mdx
+++ b/content/blocks/header.mdx
@@ -24,7 +24,7 @@ export const HeaderBlock = ({ ...props }) => {
             ml={["auto", "auto"]}
             mr="null|10"
           />
-          <ModeToggle ml="0" />
+          {/*<ModeToggle ml="0" />*/}
         </Flexbox>
       </Container>
       <Flexbox
@@ -76,9 +76,9 @@ export const HeaderBlock = ({ ...props }) => {
             </Button>
           </Flexbox>
           <NavMenu name={navName} gap={[0, 8]} borderTopWidth="1px" />
-          <Flexbox py="4" justifyContent="space-between">
+          {/*<Flexbox py="4" justifyContent="space-between">
             <ModeToggle ml="auto" />
-          </Flexbox>
+          </Flexbox>*/}
         </Div>
       </Flexbox>
     </Header>
