Added templates and sample content for the gallery.

--- a/content/pages/gallery.mdx
+++ b/content/pages/gallery.mdx
@@ -1,105 +1,79 @@
 ---
-title: Documentation
-excerpt: Reflex is collection of plugins, themes and pre-built blocks to help you build Gatsby sites faster.
+title: Gallery
+excerpt: This is a gallery of objects.
 ---
 
-<H1 textAlign="center" fontWeight="extrabold" maxW="700px" mx="auto" mb="2">
-  Documentation
-</H1>
-<H2 fontWeight="normal" fontSize="xl|2xl" textAlign="center" mt="2" mb="0">
-  Welcome to the Reflex documentation
-</H2>
+<Container pb="100px">
 
-<Container position="relative" pb="100px">
+# Gallery
 
-<Block src="doc-heading" heading="Start here" step="1" />
+This is a gallery of objects!
 
-<Block
-  src="block-link"
-  heading="Get Started"
-  text="Create a new Reflex site using the base starter."
-  url="/gallery/installation"
-  mx="0|0|auto"
-/>
+## Marine Invertebrates
 
-<Block src="doc-heading" heading="Learn the Basics" step="2" />
+Marine invertebrates are animals!
 
-<Grid col={[1, 2, 3]} gap="6" maxW="900px" mx="auto">
+<Grid col="1|2|3" gap="4|6|8" mt="4|6|8">
   <Block
-    src="block-link"
-    heading="Build a landing page"
-    text="Learn how to build a landing page using blocks."
-    url="/gallery/pages"
+    src="gallery/card"
+    href="gallery/crepidula-spp"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Crepidula spp."
   />
   <Block
-    src="block-link"
-    heading="Add a blog"
-    text="Add blog posts, authors and tags to your site."
-    url="/gallery/blog"
+    src="gallery/card"
+    href="gallery/owenia-spp"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Owenia spp."
   />
   <Block
-    src="block-link"
-    heading="Add video"
-    text="Add a video section to your site."
-    url="/gallery/video"
+    src="gallery/card"
+    href="gallery/sisyrinchium-califoricum"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Sisyrinchium califoricum"
+  />
+  <Block
+    src="gallery/card"
+    href="gallery/patiria-miniata"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Patiria miniata"
+  />
+  <Block
+    src="gallery/card"
+    href="gallery/oroxenofrea-spiculata"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Oroxenofrea spiculata"
+  />
+  <Block
+    src="gallery/card"
+    href="gallery/dendraster-excentricus"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Dendraster excentricus"
+  />
+  <Block
+    src="gallery/card"
+    href="gallery/parastichopus-parvimensis"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Parastichopus parvimensis"
   />
 </Grid>
 
-<Block src="doc-heading" heading="Style your site" step="3" />
+## Single-Celled Protists
 
-<Grid col={[1, 2]} gap="6" maxW="725px" mx="auto">
-  <Block
-    src="block-link"
-    heading="Theming"
-    text="Learn how to theme your site using style props."
-    url="/gallery/theming"
-  />
-  <Block
-    src="block-link"
-    heading="Theme Reference"
-    text="Browse the base theme style props reference."
-    url="/theme"
-  />
-</Grid>
+Single-celled protists are not animals!
 
-<Block src="doc-heading" heading="Dig Deeper" step="4" />
-
-<Grid col={[1, 2]} gap="6" maxW="725px" mx="auto">
+<Grid col="1|2|3" gap="4|6|8" mt="4|6|8">
   <Block
-    src="block-link"
-    heading="Components"
-    text="Use HTML-like syntax to build flexible components."
-    url="/gallery/components"
+    src="gallery/card"
+    href="gallery/pyrocystis-noctiluca"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Pyrocystis noctiluca"
   />
   <Block
-    src="block-link"
-    heading="Blocks"
-    text="Group components together in a block and use them on pages."
-    url="/gallery/blocks"
-  />
-  <Block
-    src="block-link"
-    heading="Navs"
-    text="Use navs to build header, footer and other navigation menus using mdx files."
-    url="/gallery/navs"
-  />
-  <Block
-    src="block-link"
-    heading="Images"
-    text="Handling local and remote images in Reflex."
-    url="/gallery/images"
-  />
-  <Block
-    src="block-link"
-    heading="Metatags"
-    text="Add Open Graph and Twitter meta tags to your site."
-    url="/gallery/metatags"
-  />
-  <Block
-    src="block-link"
-    heading="Recipes"
-    text="Helpful guides and code snippets to customize your site."
-    url="/gallery/recipes"
+    src="gallery/card"
+    href="gallery/coscinodiscus-spp"
+    image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
+    name="Coscinodiscus spp."
   />
 </Grid>
 
