--- a/content/navs/gallery.mdx
+++ b/content/navs/gallery.mdx
@@ -1,27 +1,17 @@
-- Start here
-  - [Get Started](/gallery/installation)
-    - [Directory structure](/gallery/structure)
-    - [Configuration](/gallery/configuration)
-- Learn the basics
-  - [Landing page](/gallery/pages)
-    - [Add a hero](/gallery/pages-hero)
-    - [Style the hero](/gallery/pages-style-hero)
-  - [Blog](/gallery/blog)
-    - [Configuration](/gallery/blog-configuration)
-    - [Add an author](/gallery/blog-author)
-  - [Video](/gallery/video)
-    - [Configuration](/gallery/video-configuration)
-    - [Video type](/gallery/video-type)
-  - [Theming](/gallery/theming)
-    - [Create a theme](/gallery/theming-create-theme)
-    - [Styling](/gallery/theming-styling)
-- Dig Deeper
-  - [Components](/gallery/components)
-    - [Build a button](/gallery/components#build-a-button)
-    - [Style a button](/gallery/components#style-a-button)
-  - [Blocks](/gallery/blocks)
-    - [Add a block](/gallery/blocks#add-a-block)
-    - [Using blocks](/gallery/blocks#using-blocks)
-  - [Navs](/gallery/navs)
-    - [Add a nav](/gallery/navs#add-a-nav)
-    - [Rendering navs](/gallery/navs#rendering-navs)
+- Marine Invertebrates
+  - [Mollusca](/gallery/mollusca)
+    - [Crepidula spp.](/gallery/crepidula-spp)
+  - [Annelida](/gallery/annelida)
+    - [Owenia spp.](/gallery/owenia-spp)
+  - [Hemichordata](/gallery/hemichordata)
+    - [Sisyrinchium califoricum](/gallery/sisyrinchium-califoricum)
+  - [Echinodermata](/gallery/echinodermata)
+    - [Patiria miniata](/gallery/patiria-miniata)
+    - [Oroxenofrea spiculata](/gallery/oroxenofrea-spiculata)
+    - [Dendraster excentricus](/gallery/dendraster-excentricus)
+    - [Parastichopus parvimensis](/gallery/parastichopus-parvimensis)
+- Single-Celled Protists
+  - [Dinoflagellata](/gallery/dinoflagellata)
+    - [Pyrocystis noctiluca](/gallery/pyrocystis-noctiluca)
+  - [Bacillariophyta](/gallery/bacillariophyta)
+    - [Coscinodiscus spp.](/gallery/coscinodiscus-spp)
