Fix gallery links

--- a/content/pages/gallery.mdx
+++ b/content/pages/gallery.mdx
@@ -16,43 +16,43 @@ Marine invertebrates are animals!
 <Grid col="1|2|3" gap="4|6|8" mt="4|6|8">
   <Block
     src="gallery/card"
-    href="gallery/crepidula-spp"
+    href="/gallery/crepidula-spp"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Crepidula spp."
   />
   <Block
     src="gallery/card"
-    href="gallery/owenia-spp"
+    href="/gallery/owenia-spp"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Owenia spp."
   />
   <Block
     src="gallery/card"
-    href="gallery/sisyrinchium-califoricum"
+    href="/gallery/sisyrinchium-califoricum"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Sisyrinchium califoricum"
   />
   <Block
     src="gallery/card"
-    href="gallery/patiria-miniata"
+    href="/gallery/patiria-miniata"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Patiria miniata"
   />
   <Block
     src="gallery/card"
-    href="gallery/oroxenofrea-spiculata"
+    href="/gallery/oroxenofrea-spiculata"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Oroxenofrea spiculata"
   />
   <Block
     src="gallery/card"
-    href="gallery/dendraster-excentricus"
+    href="/gallery/dendraster-excentricus"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Dendraster excentricus"
   />
   <Block
     src="gallery/card"
-    href="gallery/parastichopus-parvimensis"
+    href="/gallery/parastichopus-parvimensis"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Parastichopus parvimensis"
   />
@@ -65,13 +65,13 @@ Single-celled protists are not animals!
 <Grid col="1|2|3" gap="4|6|8" mt="4|6|8">
   <Block
     src="gallery/card"
-    href="gallery/pyrocystis-noctiluca"
+    href="/gallery/pyrocystis-noctiluca"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Pyrocystis noctiluca"
   />
   <Block
     src="gallery/card"
-    href="gallery/coscinodiscus-spp"
+    href="/gallery/coscinodiscus-spp"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Coscinodiscus spp."
   />
