--- a/content/gallery/000001-mollusca.mdx
+++ b/content/gallery/000001-mollusca.mdx
@@ -8,7 +8,7 @@ Here is some cool information about molluscs!
 <Grid col="1|2|3" gap="4|6|8" mt="4|6|8">
   <Block
     src="gallery/card"
-    href="gallery/crepidula-spp"
+    href="/gallery/crepidula-spp"
     image="gallery/Marine Invertebrates/Mollusca/Crepidula spp.png"
     name="Crepidula spp."
   />
