Don't use active color on the navbar branding link

--- a/content/blocks/header.mdx
+++ b/content/blocks/header.mdx
@@ -88,7 +88,10 @@ export const HeaderBlock = ({ ...props }) => {
 export const Branding = () => {
   const { title } = useSiteMetadata()
   return (
-    <Link href="/" fontSize="3xl" fontWeight="semibold" color="text">
+    <Link
+      href="/" fontSize="3xl" fontWeight="semibold" color="text"
+      activeStyle={{color: "text"}}
+    >
       {title}
     </Link>
   )
